--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -10,27 +10,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/to_first"
-        app:layout_constraintBottom_toTopOf="@id/to_second"
+        app:layout_constraintBottom_toTopOf="@id/to_third"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/to_second"
+        android:id="@+id/to_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/to_second"
+        android:text="@string/to_third"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/to_first" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
