--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,14 +11,10 @@
         tools:layout="@layout/fragment_3" >
         <action
             android:id="@+id/action_fragment3_to_fragment1"
-            app:destination="@id/fragment1"
-            app:popUpTo="@id/fragment1"
-            app:popUpToInclusive="true"/>
+            app:popUpTo="@id/fragment1" />
         <action
             android:id="@+id/action_fragment3_to_fragment2"
-            app:destination="@id/fragment2"
-            app:popUpTo="@id/fragment2"
-            app:popUpToInclusive="true"/>
+            app:popUpTo="@id/fragment2" />
     </fragment>
     <fragment
         android:id="@+id/fragment2"
@@ -30,9 +26,7 @@
             app:destination="@id/fragment3" />
         <action
             android:id="@+id/action_fragment2_to_fragment1"
-            app:destination="@id/fragment1"
-            app:popUpTo="@id/fragment1"
-            app:popUpToInclusive="true"/>
+            app:popUpTo="@id/fragment1" />
     </fragment>
     <fragment
         android:id="@+id/fragment1"
